rework api
